--- a/Makefile.header
+++ b/Makefile.header
@@ -35,10 +35,6 @@ ifndef P
 $(error P is not set. This set the project root.)
 endif
 
-ifeq ($(PROJECT_MODE),)
-PROJECT_MODE = debug
-endif
-
 ###################################################
 # Detect the operating system: Unix, OSX and Windows
 # and give a shorter name if needed.
@@ -65,40 +61,33 @@ TARGET_MINOR_VERSION := $(shell cat $(P)/VERSION | cut -d"." -f2)
 # Shared libraries file extension
 #
 ifeq ($(ARCHI),Darwin)
-SO="dylib"
+SO=dylib
 else ifeq ($(ARCHI),Linux)
-SO="so"
+SO=so
 else ifeq ($(ARCHI),Windows)
-SO="dll"
+SO=dll
 else
 $(error Unknown shared library file extension for this architecture)
 endif
 
 ###################################################
 # Define names for static and shared libraries.
-LIB_TARGET=lib$(TARGET)
-STATIC_LIB_TARGET=$(LIB_TARGET).a
-SHARED_LIB_TARGET=$(LIB_TARGET).$(SO).$(TARGET_VERSION)
-SYMBOLIC_SHARED_TARGET=$(LIB_TARGET).$(SO).$(TARGET_MAJOR_VERSION)
+LIB_TARGET = $(shell echo lib$(TARGET) | tr A-Z a-z)
+SYMBOLIC_SHARED_LIB_TARGET = $(LIB_TARGET).$(SO).$(TARGET_MAJOR_VERSION)
+SHARED_LIB_TARGET = $(SYMBOLIC_SHARED_LIB_TARGET).$(TARGET_MINOR_VERSION)
+STATIC_LIB_TARGET = $(LIB_TARGET).a
 
 ###################################################
-# Define the directory holding compilation files
-# (*.o ...)
-#
-ifeq ($(BUILD),)
-BUILD = build
-endif
+# Define the directory holding compilation files (*.o ...).
+BUILD ?= build
 
 ###################################################
-# Define the directory holding generated documentation
-#
-ifeq ($(GENDOC),)
-GENDOC = doc
-endif
+# Define the directory holding generated documentation.
+GENDOC ?= doc
 
-ifeq ($(PREFIX),)
-PREFIX = /usr
-endif
+###################################################
+# Prefix to the path that the "install" target will install into: libs to $(DESTDIR)$(PREFIX)/lib, executables to $(DESTDIR)$(PREFIX)/bin
+PREFIX ?= /usr
 
 ###################################################
 # Define where to install exec, data, libraries,
@@ -107,9 +96,11 @@ endif
 BINDIR = $(DESTDIR)$(PREFIX)/bin
 LIBDIR = $(DESTDIR)$(PREFIX)/lib
 DATADIR = $(DESTDIR)$(PREFIX)/share
-DOCDIR = $(DATADIR)/doc
+INCLDIR = $(shell echo $(PROJECT)-$(TARGET_VERSION)/$(PROJECT) | tr A-Z a-z)
+INCLDIR := $(DESTDIR)$(PREFIX)/include/$(INCLDIR)
 
-#TODO
+###################################################
+#TODO to be cleaned
 PROJECT_EXE = $(BINDIR)/$(TARGET)-$(TARGET_VERSION)
 PROJECT_DATA_ROOT = $(DATADIR)/$(PROJECT)/$(TARGET_VERSION)
 PROJECT_DATA_PATH = $(PROJECT_DATA_ROOT)/data
@@ -136,6 +127,32 @@ COVERAGE_RAPPORT = $(BUILD)/rapport.info
 #
 DEPFLAGS = -MT $@ -MMD -MP -MF $(BUILD)/$*.Td
 POSTCOMPILE = mv -f $(BUILD)/$*.Td $(BUILD)/$*.d
+
+###################################################
+# Install documentation
+define RULE_INSTALL_DOC
+	@$(call print-to,"Installing","doc","$(PROJECT_DATA_ROOT)","")
+	@cd doc && for d in `find . -type d`; do install -d --mode 755 "$$d" "$(PROJECT_DATA_ROOT)/doc/$$d"; done
+	@cd doc && for f in `find . -type f`; do install -D --mode 644 "$$f" "$(PROJECT_DATA_ROOT)/doc/$$f"; done
+	@install -m 644 AUTHORS LICENSE README.md ChangeLog $(PROJECT_DATA_ROOT)
+endef
+
+###################################################
+# Install static and dynamic libraries
+define RULE_INSTALL_LIBRARIES
+	@$(call print-to,"Installing","libs","$(LIBDIR)","")
+	@install -m 644 $(BUILD)/$(STATIC_LIB_TARGET) $(LIBDIR)
+	@install -m 644 $(BUILD)/$(SHARED_LIB_TARGET) $(LIBDIR)
+	@ln -snf $(LIBDIR)/$(SHARED_LIB_TARGET) $(LIBDIR)/$(SYMBOLIC_SHARED_LIB_TARGET)
+endef
+
+###################################################
+# Install .h and .hpp include files
+define RULE_INSTALL_HEADER_FILES
+	@$(call print-to,"Installing","headers","$(INCLDIR)","")
+	@cd include && for d in `find . -type d`; do install -d --mode 755 "$$d" "$(INCLDIR)/$$d"; done
+	@cd include && for f in `find . -type f`; do install -D --mode 644 "$$f" "$(INCLDIR)/$$f"; done
+endef
 
 ###################################################
 # Define the list of MyMakefile files. Changing them
