--- a/Makefile.footer
+++ b/Makefile.footer
@@ -51,13 +51,13 @@ $(SHARED_LIB_TARGET): $(OBJ)
 # Download external github code source needed by this project.
 .PHONY: download-external-libs
 download-external-libs:
-	@(cd external && ./download-external-libs.sh $(ARCHI))
+	@(cd $(THIRDPART) && ./download-external-libs.sh $(ARCHI))
 
 ###################################################
 # Compile external projects needed.
 .PHONY: compile-external-libs
 compile-external-libs:
-	@(cd external && ./compile-external-libs.sh $(ARCHI))
+	@(cd $(THIRDPART) && ./compile-external-libs.sh $(ARCHI))
 
 ###################################################
 # Create an uploadable tarball for the OpenSuse Build Service (OBS).
@@ -69,7 +69,7 @@ obs:
 # Launch the executable with address sanitizer (if enabled).
 .PHONY: asan
 asan: $(TARGET)
-	@$(SANITIZER) ./build/$(TARGET) 2>&1 | ./external/asan_symbolize.py
+	@$(SANITIZER) ./build/$(TARGET) 2>&1 | ./$(THIRDPART)/asan_symbolize.py
 
 ###################################################
 # Generate the code coverage html rapport.
