--- a/Makefile.header
+++ b/Makefile.header
@@ -110,7 +110,6 @@ BINDIR = $(DESTDIR)$(PREFIX)/bin
 LIBDIR = $(DESTDIR)$(PREFIX)/lib
 DATADIR = $(DESTDIR)$(PREFIX)/share
 INCLDIR = $(DESTDIR)$(PREFIX)/include/$(PROJECT_LOWER_CASE)-$(TARGET_VERSION)
-HEADERDIR = $(INCLDIR)/$(PROJECT_LOWER_CASE)
 
 ###################################################
 #TODO to be cleaned
@@ -163,8 +162,8 @@ endef
 # Install .h and .hpp include files
 define RULE_INSTALL_HEADER_FILES
 	@$(call print-to,"Installing","headers","$(HEADERDIR)","")
-	@cd include && for d in `find . -type d`; do install -d --mode 755 "$$d" "$(HEADERDIR)/$$d"; done
-	@cd include && for f in `find . -type f`; do install -D --mode 644 "$$f" "$(HEADERDIR)/$$f"; done
+	@cd include && for d in `find . -type d`; do install -d --mode 755 "$$d" "$(INCLDIR)/$$d"; done
+	@cd include && for f in `find . -type f`; do install -D --mode 644 "$$f" "$(INCLDIR)/$$f"; done
 endef
 
 ###################################################
