Fix usage of shared libraries
Use pkg-config for libdw instead of direct lib name.
Add macro PKG_LIBS for concatening all pkg-config libs.
Use PKG_LIBS with LDFLAGS for linkage.
Use PKG_LIBS in .pc file.
Use -ltoto in .pc file instead of full shared lib name.
Missing EXTERNAL_LIBS when compiling shared library.
Add extra symbolic link for shared library.
Tag installed static lib with version number and add symbolic link.
NOTE: $(EXTERNAL_LIBS) $(PKG_LIBS) $(LDFLAGS) should be rethink.

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -90,6 +90,6 @@ INCLUDES += -I$(P)/$(THIRDPART)/backward-cpp
 VPATH += $(P)/$(THIRDPART)/backward-cpp
 ifneq ($(ARCHI),Darwin)
 DEFINES += -DBACKWARD_HAS_DW=1
-LDFLAGS += -ldw
+PKG_LIBS += `pkg-config libdw --libs`
 endif
 endif
