--- a/Makefile.footer
+++ b/Makefile.footer
@@ -28,7 +28,7 @@ LDFLAGS := $(LDFLAGS) $(THIRDPART_LIBS) $(ALL_NEEDED_LIBS) $(OVERRIDE_LDFLAGS)
 $(TARGET): $(OBJS) $(THIRDPART_OBJS) $(THIRDPART_LIBS)
 	@$(call print-to,"Linking","$(TARGET)","$(BUILD)/$@","$(VERSION)")
 	$(Q)cd $(BUILD) && $(COMPILER) $(OBJS) $(THIRDPART_OBJS) -o $@ $(LDFLAGS)
-ifeq ($(BUILD_TYPE),debug)
+ifeq ($(BUILD_TYPE),release)
 	@# http://reverse.lostrealm.com/protect/strip.html
 	@cd $(BUILD) && strip -R .comment -R .note -R .note.ABI-tag $@
 endif
